Lab #3/CFG.g4
grammar CFG;

sentence	:	pronoun_start ss ',' pronoun_end ss '।';

ss		:	noun ss2
		|	pronoun ss2
		;

ss2		:	verb 
		|	pronoun
		;



pronoun_start	:	'যদি' | 'যে' | 'যত' | 'যেমনটা' | 'যারা' | 'যদিও' | 'যতই' | 'যখন';

pronoun_end	: 	'তবে' | 'সে' | 'তত' | 'তেমনটা' | 'তারা' | 'তথাপি' | 'ততই' | 'তখন';

noun		:	'বিপদ' | 'দুঃখও' | 'অপরাধ' | 'শাস্তি' | 'আলো' | 'পড়াশোনা' | 'গাড়িতে';

adjective	:	'গরিব' | 'অন্ধ' | 'দেশপ্রেমিক' | 'অতিথিপরায়ণ';

pronoun		:	'তুমি' | 'আমি' | 'আমার ভাই' | 'লোকটি' | 'সে';

verb		:	'আসো' | 'দাও' | 'আসে' | 'করেছে' | 'পেয়েছে' | 'করবে' | 'পাবে' | 'চড়বে' | 'ভালোবাসে' | 'যাবো' | 'জানবে' | 'পড়বে' | 'এসেছিলো' | 'চেয়েছিলাম' | 'পাইনি';
